# mcpr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Relay.Dockerfile  docker-compose.yml  mcpr.toml  package-lock.json  package.json  release.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
benches/: .gitignore  Cargo.toml  README.md
benches/configs/: bench.toml
benches/payloads/: initialize.json  tools_call.json
benches/reports/: 20260501-tools-call-overhead.md  TEMPLATE.md  v0.4.41-baseline.md  v0.4.41-local-build.md  v0.4.42-post-refactor.md
benches/scripts/: all.sh  bench-weather.sh  lib.sh  use-local.sh
benches/scripts/scenarios/: fixed-overhead.sh  multi-event-sse.sh  passthrough-binary.sh  realistic-overhead.sh  session-churn.sh  session-reuse.sh  sse-compat.sh
benches/scripts/scenarios/correctness/: multi-event-sse.sh  passthrough-binary.sh  sse-compat.sh
benches/scripts/scenarios/diagnostics/: where-time-goes.sh
benches/scripts/scenarios/perf/: overhead.sh  realistic-latency.sh  realistic-mix.sh  session-reuse.sh  stress.sh
config_examples/: no-tunnel.toml  relay.toml  tunnel.toml
crates/mcpr-cli/: Cargo.toml
crates/mcpr-cli/src/: admin.rs  background.rs  commands.rs  config.rs  daemon.rs  display.rs  event_bus.rs  main.rs  mcp_handler.rs  onboarding.rs  passthrough.rs  proxy.rs  proxy_lock.rs  relay_lock.rs  render.rs  router.rs  state.rs  stderr_sink.rs  widgets.rs
crates/mcpr-cli/src/cmd/: mod.rs  observe.rs  proxy.rs  relay.rs  setup.rs  store.rs
crates/mcpr-cli/src/logger/: entry.rs  file_sink.rs  mod.rs  sink.rs  stderr_sink.rs
crates/mcpr-cli/src/logic/: daemon.rs  mod.rs  proxy.rs  query.rs  relay.rs
crates/mcpr-cli/src/pipeline/: context.rs  emit.rs  mod.rs  parser.rs
crates/mcpr-cli/src/pipeline/mw/: mod.rs  rewrite_url.rs  schema.rs  sse.rs  upstream_url_map.rs
crates/mcpr-cli/src/tui/: app.rs  mod.rs  state.rs  ui.rs
crates/mcpr-core/: Cargo.toml
crates/mcpr-core/src/: config.rs  env.rs  event.rs  lib.rs  time.rs  timing.rs
crates/mcpr-core/src/auth/: discovery.rs  mod.rs  parse.rs  provider.rs  provider_reflect.rs  provider_static.rs  types.rs
crates/mcpr-core/src/event/: bus.rs  manager.rs  mod.rs  openai.rs  sink.rs  types.rs
crates/mcpr-core/src/protocol/: http_request.rs  jsonrpc.rs  mcp.rs  mod.rs  schema.rs  session.rs  sse.rs
crates/mcpr-core/src/protocol/schema_manager/: manager.rs  mod.rs  scanner.rs  store.rs  version.rs
crates/mcpr-core/src/proxy/: csp.rs  emit.rs  forwarding.rs  health.rs  intake.rs  mod.rs  pipeline_builder.rs  proxy_state.rs  rewrite.rs  router.rs  sse.rs  state.rs  transport.rs  widgets.rs
crates/mcpr-core/src/proxy/pipeline/: context.rs  driver.rs  emit.rs  envelope.rs  message.rs  middleware.rs  mod.rs  parser.rs  route.rs  run.rs  stubs.rs  values.rs
crates/mcpr-core/src/proxy/pipeline/handlers/: buffered.rs  header_phase.rs  mod.rs  passthrough.rs  sse.rs  streamed.rs
crates/mcpr-core/src/proxy/pipeline/middleware/: health.rs  mod.rs  rewrite_url.rs  schema.rs  session.rs  sse.rs  upstream_url_map.rs  widget_overlay.rs
crates/mcpr-core/src/proxy/pipeline/middlewares/: client_info_inject.rs  csp_rewrite.rs  envelope_seal.rs  health_track.rs  mod.rs  schema_ingest.rs  schema_stale.rs  session_delete.rs  session_record.rs  session_touch.rs  shared.rs  target_extract.rs  test_support.rs  tool_extract.rs  url_map.rs
crates/mcpr-core/src/proxy/pipeline/steps/: health.rs  mod.rs  rewrite.rs  schema.rs  session.rs  url_map.rs  widget.rs
crates/mcpr-core/src/proxy2/: csp.rs  mod.rs  proxy_config.rs  state.rs
crates/mcpr-core/src/proxy2/stage/: csp_rewritten_stage.rs  log_stage.rs  mod.rs  request_tracking_stage.rs  router_stage.rs  schema_tracking_stage.rs  sesion_stage.rs  session_stage.rs  session_tracking_stage.rs  types.rs
crates/mcpr-core/src/proxy2/upstream/: pool.rs
crates/mcpr-core/src/timer/: mod.rs
crates/mcpr-core/src/utils/: time.rs
crates/mcpr-core/tests/: pipeline_integration.rs
crates/mcpr-events/: Cargo.toml
crates/mcpr-events/src/: cloud.rs  emitter.rs  event.rs  lib.rs  stdout.rs
crates/mcpr-integrations/: Cargo.toml
crates/mcpr-integrations/src/: cloud_client.rs  lib.rs  wire.rs
crates/mcpr-integrations/src/emitter/: cloud.rs  event.rs  mod.rs  stdout.rs  traits.rs
crates/mcpr-integrations/src/sinks/: cloud_sink.rs  mod.rs  sqlite_sink.rs  stderr_sink.rs
crates/mcpr-integrations/src/store/: config.rs  db.rs  duration.rs  engine.rs  event.rs  mod.rs  path.rs  schema.rs  sqlite_sink.rs  store.rs  writer.rs
crates/mcpr-integrations/src/store/query/: clients.rs  logs.rs  mod.rs  schema.rs  session_detail.rs  sessions.rs  slow.rs  stats.rs  store_ops.rs
crates/mcpr-protocol/: Cargo.toml
crates/mcpr-protocol/src/: lib.rs  schema.rs
crates/mcpr-proxy/: Cargo.toml
crates/mcpr-proxy/src/: csp.rs  forwarding.rs  lib.rs  rewrite.rs  state.rs
crates/mcpr-session/: Cargo.toml
crates/mcpr-tunnel/: Cargo.toml
crates/mcpr-tunnel/src/: client.rs  lib.rs  protocol.rs
crates/mcpr-tunnel/src/relay/: auth.rs  mod.rs
crates/mcpr-widgets/: Cargo.toml
crates/mcpr-widgets/src/: lib.rs  rewrite.rs
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  CUSTOM_EVENT_SINK.md  DOCKER.md  EVENT_BUS_IN_MCPR.md  SCHEMA_CAPTURE.md  SUPPORTED_MCP_METHODS.md
docs/change-logs/: 0.5.0.md  0.5.1.md  0.5.2.md  0.5.3.md  0.5.4.md  0.5.41.md  0.5.42.md
docs/proxy/: CSP.md  PIPELINE.md  PIPELINE_ARCHITECTURE.md  PIPELINE_REFACTOR_PLAN.md  PRODUCTION_GUIDE.md  PROXY_CONFIGURATION.md  REFACTOR_PLAN.md  SUPPORTED_MCP_METHODS.md  USE_CASES.md  WIDGET_CSP.md
docs/relay-and-tunnel/: AUTH_PROVIDER.md  DEPLOY_RELAY_SERVER.md  RELAY_SERVER_STATIC_TOKENS.md
examples/weather-app/: README.md  mcpr.toml  package-lock.json  package.json  server.ts
scripts/: install.sh
src/: config.rs  display.rs  main.rs  onboarding.rs  proxy.rs  tunnel.rs  widgets.rs
src/logger/: entry.rs  file_sink.rs  mod.rs  sink.rs  tui_sink.rs
src/relay/: config.rs  mod.rs
studio/: index.html
(+18 files in other folders)
