[workspace]
members = [
    "crates/mcpr-cli",
    "crates/mcpr-protocol",
    "crates/mcpr-session",
    "crates/mcpr-widgets",
    "crates/mcpr-tunnel",
    "crates/mcpr-events",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
futures-util = "0.3"
url = "2"
base64 = "0.22"
sha2 = "0.10"
tokio-tungstenite = { version = "0.26", features = ["connect", "rustls-tls-webpki-roots"] }
mcpr-protocol = { path = "crates/mcpr-protocol" }
mcpr-session = { path = "crates/mcpr-session" }
mcpr-widgets = { path = "crates/mcpr-widgets" }
mcpr-tunnel = { path = "crates/mcpr-tunnel" }
mcpr-events = { path = "crates/mcpr-events" }
