[workspace]
members = [
    "crates/mcpr-cli",
    "crates/mcpr-core",
    "crates/mcpr-protocol",
    "crates/mcpr-proxy",
    "crates/mcpr-integrations",
    "crates/mcpr-tunnel",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.3.0"
repository = "https://github.com/cptrodgers/mcpr"
homepage = "https://mcpr.app"
description = "Open-source proxy for MCP Apps — fixes CSP, handles auth, observes every tool call."

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
futures-util = "0.3"
url = "2"
base64 = "0.22"
sha2 = "0.10"
tokio-tungstenite = { version = "0.26", features = ["connect", "rustls-tls-webpki-roots"] }
mcpr-core = { path = "crates/mcpr-core", version = "0.3.0" }
mcpr-protocol = { path = "crates/mcpr-protocol", version = "0.3.0" }
mcpr-proxy = { path = "crates/mcpr-proxy", version = "0.3.0" }
mcpr-integrations = { path = "crates/mcpr-integrations", version = "0.3.0" }
mcpr-tunnel = { path = "crates/mcpr-tunnel", version = "0.3.0" }

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
