[workspace]
members = [
    "crates/mcpr-cli",
    "crates/mcpr-core",
    "crates/mcpr-integrations",
    "crates/mcpr-tunnel",
]
exclude = ["benches"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.4.56"
repository = "https://github.com/cptrodgers/mcpr"
homepage = "https://mcpr.app"
description = "MCPR is a reverse proxy for MCP servers — operating at the JSON-RPC layer to route, authenticate, observe, and secure MCP traffic."

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
futures-util = "0.3"
async-trait = "0.1"
url = "2"
base64 = "0.22"
sha2 = "0.11"
tokio-tungstenite = { version = "0.29", features = ["connect", "rustls-tls-webpki-roots"] }
mcpr-core = { path = "crates/mcpr-core", version = "0.4.56" }
mcpr-integrations = { path = "crates/mcpr-integrations", version = "0.4.56" }
mcpr-tunnel = { path = "crates/mcpr-tunnel", version = "0.4.56" }

# Release builds — tuned for runtime perf at the cost of build time.
# `lto = "thin"` enables cross-crate inlining (5–15% perf on hot paths);
# `codegen-units = 1` maximizes optimizer visibility; `panic = "abort"`
# shrinks the binary and lets the compiler skip unwind tables.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
