[package]
name = "mcpr-bench"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Benchmark harness for mcpr. Hand-rolled HTTP loop against the weather example, direct vs proxied. Standalone crate, not part of the mcpr workspace."

[[bin]]
name = "session-bench"
path = "src/bin/session_bench.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
humantime = "2"
