[package]
name = "mcpr"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcpr"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
colored = "3"
chrono = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
tokio-tungstenite = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
http-body-util = "0.1"
toml = "0.8"
dashmap = { workspace = true }
url = { workspace = true }
mcpr-protocol = { workspace = true }
mcpr-session = { workspace = true }
mcpr-widgets = { workspace = true }
mcpr-tunnel = { workspace = true }
mcpr-events = { workspace = true }

[dev-dependencies]
tempfile = "3"
