[package]
name = "mcpr-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A proxy for MCP Apps/Servers — routes JSON-RPC, observes traffic, authenticates, and secures MCP."

[[bin]]
name = "mcpr"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
colored = "3"
tabled = "0.17"
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
http-body-util = "0.1"
toml = "1.1"
dashmap = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
mcpr-core = { workspace = true }

mcpr-tunnel = { workspace = true }
mcpr-integrations = { workspace = true }
inquire = "0.7"

# Faster allocator than the system default — noticeably better latency on
# alloc-heavy paths (per-request HeaderMap, Bytes, JSON buffers).
mimalloc = { version = "0.1", default-features = false }

# Platform-specific default paths for PID file and daemon log.
dirs = "6"

# UNIX process management: fork, setsid, signal (for daemon mode).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs"] }

[dev-dependencies]
tempfile = "3"
