[package]
name = "mcpr-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A proxy for MCP Apps/Servers — routes JSON-RPC, observes traffic, authenticates, and secures MCP."

[[bin]]
name = "mcpr"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = "3"
chrono = { workspace = true }
base64 = { workspace = true }
toml = "1.1"
async-trait = { workspace = true }
url = { workspace = true }
mcpr-core = { workspace = true }
mcpr-integrations = { workspace = true }
mcp-tunnel-client = "0.2.1"
inquire = "0.9"

# Faster allocator than the system default — noticeably better latency on
# alloc-heavy paths (per-request HeaderMap, Bytes, JSON buffers).
mimalloc = { version = "0.1", default-features = false }

# Platform-specific default paths for the auth file written by `proxy setup`.
dirs = "6"

[dev-dependencies]
tempfile = "3"
