[package]
name = "mcpr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proxy engine, router, and request forwarding for mcpr"

[dev-dependencies]
serde_json = { workspace = true }

[dependencies]
mcpr-protocol = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
