[package]
name = "mcpr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, protocol, and proxy engine for mcpr crates"

[dev-dependencies]
tempfile = "3"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
# Lock-free reads for `ProxyState.rewrite_config` — hot path.
arc-swap = "1"
