[package]
name = "mcpr-events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured event system for MCP tool calls and sessions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
