[package]
name = "mcpr-events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured event system for MCP tool calls and sessions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util", "macros"] }
