[package]
name = "mcpr-integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "External integrations for mcpr: event emitters, metrics, feature flags, and analytics"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util", "macros"] }
