[package]
name = "mcpr-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-RPC 2.0 parser and MCP protocol types for mcpr"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
