[package]
name = "mcpr-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proxy engine for mcpr: request routing, upstream forwarding, SSE streaming, and widget CSP rewriting"

[dependencies]
mcpr-protocol = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
