[package]
name = "mcpr-tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tunnel client and self-hosted relay server for mcpr"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
colored = "3"
